--- a/javascript-avancado/client/index.html
+++ b/javascript-avancado/client/index.html
@@ -13,7 +13,7 @@
 
   <h1 class="text-center">Negociações</h1>
 
-  <form class="form">
+  <form class="form" onsumit="negociacaoController.adiciona(event)">
 
     <div class="form-group">
       <label for="data">Data</label>
@@ -60,18 +60,12 @@
     <tfoot>
     </tfoot>
   </table>
-  <script src="js/Models/Negociacao.js"></script>
-
+  <script src="js/models/Negociacao.js"></script>
+  <script src="js/controller/NegociacaoController.js"></script>
+  
   <script>
-    let n1 = new Negociacao(new Date(), 10, 700);
-    let amanha = new Date();
-
-    amanha.setDate(11);
-    n1._data = amanha
-     
-    console.log( n1.getData() )
+    let negociacaoController = new negociacaoController();  
   </script>
 
 </body>
-
 </html>
